--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7082,6 +7082,30 @@ repositories:
       url: https://github.com/turtlebot/turtlebot.git
       version: kinetic
     status: maintained
+  turtlebot3:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3.git
+      version: kinetic-devel
+    release:
+      packages:
+      - turtlebot3
+      - turtlebot3_bringup
+      - turtlebot3_description
+      - turtlebot3_fake
+      - turtlebot3_gazebo
+      - turtlebot3_navigation
+      - turtlebot3_slam
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/turtlebot3-release.git
+      version: 0.1.3-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3.git
+      version: kinetic-devel
+    status: maintained
   turtlebot3_msgs:
     doc:
       type: git
