rqt: 0.5.0-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1362,10 +1362,11 @@ repositories:
       - rqt_gui
       - rqt_gui_cpp
       - rqt_gui_py
+      - rqt_py_common
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ros-gbp/rqt-release.git
-      version: 0.3.2-0
+      version: 0.5.0-0
     source:
       type: git
       url: https://github.com/ros-visualization/rqt.git
