--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -902,6 +902,21 @@ repositories:
       url: https://github.com/orocos/orocos_kinematics_dynamics.git
       version: master
     status: maintained
+  pcl_conversions:
+    doc:
+      type: git
+      url: https://github.com/ros-perception/pcl_conversions.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/pcl_conversions-release.git
+      version: 0.2.1-0
+    source:
+      type: git
+      url: https://github.com/ros-perception/pcl_conversions.git
+      version: indigo-devel
+    status: maintained
   pcl_msgs:
     doc:
       type: git
