household_objects_database_msgs: 0.1.2-0 in 'lunar/distribution.yaml' [bloom] (#14647)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -528,6 +528,21 @@ repositories:
       url: https://github.com/ros-visualization/gl_dependency.git
       version: kinetic-devel
     status: maintained
+  household_objects_database_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros-interactive-manipulation/household_objects_database_msgs.git
+      version: hydro-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/household_objects_database_msgs-release.git
+      version: 0.1.2-0
+    source:
+      type: git
+      url: https://github.com/ros-interactive-manipulation/household_objects_database_msgs.git
+      version: hydro-devel
+    status: maintained
   image_common:
     doc:
       type: git
