--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2562,6 +2562,26 @@ repositories:
       url: https://github.com/ros-drivers/korg_nanokontrol.git
       version: master
     status: maintained
+  kuka:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/kuka.git
+      version: indigo-devel
+    source:
+      type: git
+      url: https://github.com/ros-industrial/kuka.git
+      version: indigo-devel
+    status: developed
+  kuka_experimental:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/kuka_experimental.git
+      version: indigo-devel
+    source:
+      type: git
+      url: https://github.com/ros-industrial/kuka_experimental.git
+      version: indigo-devel
+    status: developed
   kvh_drivers:
     doc:
       type: git
