--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -1251,6 +1251,12 @@ repositories:
       url: https://github.com/fzi-forschungszentrum-informatik/fzi_icl_can.git
       version: master
     status: maintained
+  fzi_icl_comm:
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/fzi-forschungszentrum-informatik/fzi_icl_comm-release.git
+      version: 0.0.2-0
   fzi_icl_core:
     doc:
       type: git
