--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1151,12 +1151,15 @@ repositories:
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ros-gbp/robot_model-release.git
-      version: 1.12.8-2
+      version: 1.12.9-0
     source:
       type: git
       url: https://github.com/ros/robot_model.git
       version: kinetic-devel
-    status: maintained
+    status: end-of-life
+    status_description: The robot_model metapackage is deprecated and will be removed
+      in ROS M. The packages it includes will continue to be maintained, but will
+      be moved to new repositories.
   robot_state_publisher:
     doc:
       type: git
