--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -643,6 +643,17 @@ repositories:
       url: https://github.com/ros-visualization/interactive_markers.git
       version: indigo-devel
     status: maintained
+  ivcon:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/ivcon-release.git
+      version: 0.1.6-0
+    source:
+      type: git
+      url: https://github.com/ros/ivcon.git
+      version: kinetic-devel
+    status: maintained
   laser_assembler:
     doc:
       type: git
