rotors_simulator: 2.1.0-4 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11779,10 +11779,11 @@ repositories:
       - rotors_hil_interface
       - rotors_joy_interface
       - rotors_simulator
+      - rqt_rotors
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ethz-asl/rotors_simulator-release.git
-      version: 2.1.0-3
+      version: 2.1.0-4
     source:
       type: git
       url: https://github.com/ethz-asl/rotors_simulator.git
