--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3380,7 +3380,7 @@ repositories:
     source:
       type: git
       url: https://github.com/mrpt-ros-pkg/mrpt_navigation.git
-      version: master
+      version: compat-mrpt-1.3
     status: maintained
   mrpt_slam:
     doc:
@@ -3402,7 +3402,7 @@ repositories:
     source:
       type: git
       url: https://github.com/mrpt-ros-pkg/mrpt_slam.git
-      version: master
+      version: compat-mrpt-1.3
     status: maintained
   msp:
     doc:
