--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2053,11 +2053,12 @@ repositories:
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ros-gbp/stage-release.git
-      version: 4.1.1-2
+      version: 4.3.0-0
     source:
       type: git
       url: https://github.com/ros-gbp/stage-release.git
       version: release/kinetic/stage
+    status: maintained
   std_capabilities:
     doc:
       type: git
