--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1858,6 +1858,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt_robot_monitor.git
       version: master
     status: maintained
+  rqt_robot_plugins:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_robot_plugins.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_robot_plugins-release.git
+      version: 0.5.7-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/rqt_robot_plugins.git
+      version: master
+    status: maintained
   rqt_robot_steering:
     doc:
       type: git
