mav_comm: 3.2.0-1 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3036,6 +3036,15 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/MarvelmindRobotics/marvelmind_nav-release.git
       version: 1.0.6-0
+  mav_comm:
+    release:
+      packages:
+      - mav_comm
+      - mav_msgs
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ethz-asl/mav_comm-release.git
+      version: 3.2.0-1
   mavlink:
     doc:
       type: git
