--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -5836,6 +5836,23 @@ repositories:
       url: https://github.com/tork-a/roswww.git
       version: develop
     status: maintained
+  rotors_simulator:
+    release:
+      packages:
+      - rotors_comm
+      - rotors_control
+      - rotors_description
+      - rotors_evaluation
+      - rotors_gazebo
+      - rotors_gazebo_plugins
+      - rotors_hil_interface
+      - rotors_joy_interface
+      - rotors_simulator
+      - rqt_rotors
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/ethz-asl/rotors_simulator-release.git
+      version: 3.0.0-0
   rplidar_python:
     doc:
       type: git
