log4cpp: 2.9.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2815,7 +2815,10 @@ repositories:
       url: https://github.com/orocos-toolchain/log4cpp.git
       version: toolchain-2.9
     release:
+      tags:
+        release: release/kinetic/{package}/{version}
       url: https://github.com/orocos-gbp/log4cpp-release.git
+      version: 2.9.0-0
     source:
       type: git
       url: https://github.com/orocos-toolchain/log4cpp.git
