--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1834,6 +1834,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt_publisher.git
       version: master
     status: maintained
+  rqt_py_console:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_py_console.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_py_console-release.git
+      version: 0.4.8-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/rqt_py_console.git
+      version: master
+    status: maintained
   rqt_reconfigure:
     doc:
       type: git
