--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11884,6 +11884,22 @@ repositories:
       url: https://github.com/OTL/rqt_ez_publisher.git
       version: indigo-devel
     status: developed
+  rqt_graph:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_graph-release.git
+      version: 0.4.8-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    status: maintained
   rqt_graphprofiler:
     doc:
       type: git
