--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -5894,10 +5894,11 @@ repositories:
       - rqt_gui
       - rqt_gui_cpp
       - rqt_gui_py
+      - rqt_py_common
       tags:
         release: release/jade/{package}/{version}
       url: https://github.com/ros-gbp/rqt-release.git
-      version: 0.2.14-0
+      version: 0.4.8-0
     source:
       type: git
       url: https://github.com/ros-visualization/rqt.git
